profil och light/dark mode och några fixes

--- a/style.css
+++ b/style.css
@@ -1,10 +1,10 @@
 @font-face {
-    font-family: antique;
+    font-family: 'antique';
     src: url(caslon-antique.ttf)
 }
 
 @font-face {
-    font-family: boldgothic;
+    font-family: 'boldgothic';
     src: url(league-gothic.ttf)
 }
 
@@ -27,18 +27,77 @@ body {
     align-items: center;
     padding: 0 50px;
     height: 100%;
+    color: white;
+    font-family: sans-serif;
 }
 
 .logo-container{
-    flex: 1px;
+    flex: 1;
+}
+
+.logo {
+    font-size: 30px;
+    color: green;
 }
 
 .menu-container{
-    flex: 6px;
+    flex: 6;
+}
+
+.menu-list{
+    display: flex;
+    list-style: none;
+}
+
+.menu-list-item{
+    margin-right: 30px;
+}
+
+.menu-list-item.active{
+    font-weight: bold;
 }
 
 .profile-container{
-    flex: 2px;
+    flex: 2;
+    display: flex;
+    align-items: center;
+    justify-content: flex-end;
+}
+
+.profile-text-container{
+    margin: 0 20px;
+}
+
+.profile-picture{
+    width: 32px;
+    height: 32px;
+    border-radius: 50%;
+    object-fit: cover;
+}
+
+.toggle {
+    width: 40px;
+    height: 20px;
+    background-color: white;
+    border-radius: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    position: relative;
+}
+
+.toggle-icon{
+    color: goldenrod;
+}
+
+.toggle-ball{
+    width: 18px;
+    height: 18px;
+    background-color: black;
+    position: absolute;
+    right: 1px;
+    border-radius: 50%;
+    cursor: pointer;
 }
 
 .sidebar{
